# strawberryJAM

./: .gitignore  .gitmessage  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sql_app.db-journal
app/: main.py
app/templates/: main.html
src/: config.py  database.py  main.py  utils.py
src/endpoints/: discussion.py  feedback.py  routes.py  topic.py
src/models/: base.py  discussion.py  message.py  model.py  topic.py
src/repositories/: discussion.py  message.py  topic.py
src/services/: gpt.py  message.py
src/websockets/: ws.py
templates/: discussion.html  chat.html  discussion.html  main.html  topics.html
templates/js/: scripts.js
