[tool.poetry]
name = "strawberryjam"
version = "0.1.0"
description = ""
authors = ["bkkhyunn <toiquen419@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
langchain = "^0.2.1"
jinja2 = "^3.1.4"
websockets = "^12.0"
pydantic = "^2.7.2"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
sqlalchemy = "^2.0.30"
langchain-core = "^0.2.3"
langchain-community = "^0.2.1"
langchain-openai = "^0.1.8"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
autoflake = "^2.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
ruff = "^0.4.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
ignore = "E203, E501, W503"
max-line-length = 88
exclude = ".git,__pycache__,docs/,old/,build/,dist/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
